Alignment fix

--- a/src/css/tabs-dark/pid_tuning-dark.css
+++ b/src/css/tabs-dark/pid_tuning-dark.css
@@ -261,5 +261,5 @@
 }
 
 .tab-pid_tuning table.compensation tr {
-    border-bottom: 1px solid #9c9c9c;
+    border-bottom: 1px solid #6b6b6b;
 }
